--- a/TheMusicExchangeProject/Views/Shared/_Layout.cshtml
+++ b/TheMusicExchangeProject/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Search Users</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Index">Search Users</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Skill" asp-action="Index">Skills</a>
