--- a/TheMusicExchangeProject/Views/Account/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Account/Index.cshtml
@@ -4,6 +4,16 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<form asp-action="Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            I want to learn: <input type="text" name="SearchString" value="@ViewData"["skillFilter"]" />
+            <input type="submit" value="Search" class="btn btn-default" />
+            <a asp-action="Index">Clear Search</a>
+        </p>
+    </div>
+</form>
+
 <h1>Index</h1>
 
 <div class="profile-row">
