--- a/TheMusicExchangeProject/Views/Account/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Account/Index.cshtml
@@ -7,7 +7,8 @@
 <form asp-action="Index" method="get">
     <div class="form-actions no-color">
         <p>
-            I want to learn: <input type="text" name="SearchString" value="@ViewData"["skillFilter"]" />
+            Find someone that plays: <input type="text" name="SearchString" value="@ViewData"["skillFilter"]"/>
+            At skill level: <select name="selectedLevel" asp-items="ViewBag.levels" value="@ViewData"["levelFilter"]"></select>
             <input type="submit" value="Search" class="btn btn-default" />
             <a asp-action="Index">Clear Search</a>
         </p>
