--- a/TheMusicExchangeProject/Views/Account/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Account/Index.cshtml
@@ -7,15 +7,13 @@
 <form asp-action="Index" method="get">
     <div class="form-actions no-color">
         <p>
-            Find someone that plays: <input type="text" name="SearchString" value="@ViewData"["skillFilter"]"/>
+            Find someone that plays: <input type="text" name="SearchString" />
             At skill level: <select name="selectedLevel" asp-items="ViewBag.levels" value="@ViewData"["levelFilter"]"></select>
             <input type="submit" value="Search" class="btn btn-default" />
             <a asp-action="Index">Clear Search</a>
         </p>
     </div>
 </form>
-
-<h1>Index</h1>
 
 <div class="profile-row">
     @foreach (var item in Model)
