Users can now block each other.

--- a/TheMusicExchangeProject/Views/Account/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Account/Index.cshtml
@@ -34,6 +34,7 @@
                 </p>
                 <p>
                     <a asp-action="Connect" asp-route-id="@item.Users.Id">Connect</a>
+                    <a asp-action="Block" asp-route-id="@item.Users.Id">Block</a>
                 </p>
             </div>
         </div>
