Created a basic list of connected users.

--- a/TheMusicExchangeProject/Views/Account/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Account/Index.cshtml
@@ -40,3 +40,12 @@
         </div>
     }
 </div>
+<div>
+    <ul>
+        @foreach(var connection in ViewBag.data)
+        {
+            <li>@connection.Users.Name</li>
+        }
+        
+    </ul>
+</div>
