Started implementation of a Chat: - Added tables needed to database - Created Controller - Created View - Created ViewModels

--- a/TheMusicExchangeProject/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/TheMusicExchangeProject/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<TheMusicExchangeProjectUser> SignInManager
+﻿@using TheMusicExchangeProject.Models;
+@inject SignInManager<TheMusicExchangeProjectUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
