--- a/TheMusicExchangeProject/Views/Chat/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Chat/Index.cshtml
@@ -60,6 +60,7 @@
                 <div class="col group_main">
                     <div class="text-center"> Chats </div>
                     <div class="row" style="height: 500px;overflow: scroll;" id="groups">
+                        <input type="hidden" value="" id="currentGroup">
                         @foreach (var group in (dynamic)ViewData["UserGroups"])
                         {
                             <div class="group" data-group_id="@group.GroupId"> @group.GroupName </div>
@@ -109,7 +110,7 @@
                             {
                                 <div class="col-4">
                                     <div class="form-check">
-                                        <input type="checkbox" value="@user.UserName" name="UserName[]" />
+                                        <input type="checkbox" value="@user.UserName" name="UserName[]">
                                         <label class="form-check-label" for="Users">@user.UserName</label>
                                     </div>
                                 </div>
