--- a/TheMusicExchangeProject/Views/Shared/_Layout.cshtml
+++ b/TheMusicExchangeProject/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Skill" asp-action="Index">Skills</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Message" asp-action="Index">Messages</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Chat" asp-action="Index">Messages</a>
                             </li>
                         }
                     </ul>
