--- a/TheMusicExchangeProject/Views/Chat/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Chat/Index.cshtml
@@ -110,7 +110,7 @@
                             {
                                 <div class="col-4">
                                     <div class="form-check">
-                                        <input type="checkbox" value="@user.UserName" name="UserName[]">
+                                        <input type="checkbox" value="@user.UserName" name="UserName[]" class="chk_class">
                                         <label class="form-check-label" for="Users">@user.UserName</label>
                                     </div>
                                 </div>
