--- a/TheMusicExchangeProject/Views/Chat/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Chat/Index.cshtml
@@ -13,44 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-    <style type="text/css">
-        .group {
-            padding: 13px;
-            border-radius: 12px;
-            background: rgb(57, 125, 192);
-            margin: 5px 0px;
-            font-weight: bolder;
-            color: black;
-            cursor: pointer;
-        }
-
-        .chat_body {
-            height: 520px;
-            overflow: scroll;
-        }
-
-        .less_padding {
-            padding: 2px;
-        }
-
-        .chat_message {
-            padding: 13px;
-            border-radius: 12px;
-            width: 50%;
-            background: #85C1E9;
-            margin: 6px 4px;
-        }
-
-        .chat_main {
-            background-color: #957bbe;
-            height: 520px;
-            padding: 0px;
-        }
-
-        .group_main {
-            background-color: #85C1E9;
-        }
-    </style>
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <h3 class="text-center">Welcome</h3>
