--- a/TheMusicExchangeProject/wwwroot/css/site.css
+++ b/TheMusicExchangeProject/wwwroot/css/site.css
@@ -57,46 +57,123 @@ body {
 
 /*Profile Cards
     ------------------------------------------------ */
-* {
-    box-sizing: border-box;
-}
-
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
+    background: #ecf0f1;
+    line-height: 1.4;
 }
 
-/* Float four columns side by side */
-.profile-column {
-    float: left;
-    width: 25%;
-    padding: 0 10px;
+p {
+    color: #666;
 }
 
-/* Remove extra left and right margins, due to padding */
-.profile-row {
-    margin: 0 -5px;
+h3 {
+    font-size: 2em;
+    color: #e74c3c;
 }
 
-    /* Clear floats after the columns */
-    .profile-row:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
+.centered {
+    margin: 0 auto;
+    padding: 0 1em;
+}
 
-/* Responsive columns */
-@media screen and (max-width: 600px) {
-    .profile-column {
-        width: 100%;
-        display: block;
-        margin-bottom: 20px;
+@media screen and (min-width: 52em) {
+    .centered {
+        max-width: 52em;
     }
 }
+.card {
+    background: white;
+    margin-bottom: 2em;
+}
 
-/* Style the counter cards */
-.profile-card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 16px;
-    text-align: center;
-    background-color: #f1f1f1;
+    .card a {
+        color: black;
+        text-decoration: none;
+    }
+
+        .card a:hover {
+            box-shadow: 3px 3px 8px hsl(0, 0%, 70%);
+        }
+
+.card-content {
+    padding: 1.4em;
+}
+
+    .card-content h2 {
+        margin-top: 0;
+        margin-bottom: .5em;
+        font-weight: normal;
+    }
+
+    .card-content p {
+        font-size: 95%;
+    }
+@media screen and (min-width: 40em) {
+    .cards {
+        margin-top: -1em;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .card {
+        margin-bottom: 1em;
+        display: flex;
+        flex: 0 1 calc(50% - 0.5em);
+        /* width: calc(50% - 1em); */
+    }
+}
+/* mq 40em*/
+
+@media screen and (min-width: 60em) {
+    .cards {
+        margin-top: inherit;
+    }
+
+    .card {
+        margin-bottom: 2em;
+        display: flex;
+        flex: 0 1 calc(33% - 0.5em);
+        /* width: calc(33% - 1em); */
+    }
+}
+
+/* Chat window
+    ------------------------------------------------ */
+.group {
+    padding: 13px;
+    border-radius: 12px;
+    background: rgb(57, 125, 192);
+    margin: 5px 0px;
+    font-weight: bolder;
+    color: black;
+    cursor: pointer;
+}
+
+.chat_body {
+    height: 520px;
+    overflow: scroll;
+}
+
+.less_padding {
+    padding: 2px;
+}
+
+.chat_message {
+    padding: 13px;
+    border-radius: 12px;
+    width: 50%;
+    background: #85C1E9;
+    margin: 6px 4px;
+}
+
+.chat_main {
+    background-color: #957bbe;
+    height: 520px;
+    padding: 0px;
+}
+
+.group_main {
+    background-color: #85C1E9;
 }
