Edited CSS for the Navbar. Added class for calculating distance between postcodes.

--- a/TheMusicExchangeProject/Views/Account/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Account/Index.cshtml
@@ -28,7 +28,7 @@
                 </h3>
                 <p>
                     @Html.DisplayFor(modelItem => item.Age)
-                    @Html.DisplayFor(modelItem => item.Users.Postcode)
+                    @Html.DisplayFor(modelItem => item.Distance)
                 </p>
                 <p>
                     @Html.DisplayFor(modelItem => item.Users.Bio)
