--- a/TheMusicExchangeProject/wwwroot/css/site.css
+++ b/TheMusicExchangeProject/wwwroot/css/site.css
@@ -1,4 +1,5 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
+﻿@import url('https://fonts.googleapis.com/css?family=Lobster');
+/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
@@ -7,9 +8,55 @@ a.navbar-brand {
   word-break: break-all;
 }
 
-/* Sticky footer styles
+.navbar-brand {
+    float: left;
+    padding: 15px 15px;
+    font-size: 1.875rem;
+    line-height: 20px;
+    font-family: 'Lobster', cursive;
+}
+
+#logout {
+    color: #fff;
+    font-family: 'Lobster', cursive;
+    font-size: 1rem;
+}
+
+.navbar-toggler {
+    background-color: #676767;
+}
+
+.navbar-inverse{
+    background-color: #000;
+    border-color: #eeeeee;
+}
+    .navbar-inverse .navbar-brand {
+        color: #fff;
+    }
+        .navbar-inverse .navbar-brand:hover,
+        .navbar-inverse .navbar-brand:focus {
+            color: gold;
+           
+        }
+    .navbar-inverse .navbar-text {
+        color: #fff;
+        
+    }
+
+    .navbar-inverse .navbar-nav > li > a {
+        color: #fff;
+        font-family: 'Lobster', cursive;
+        font-size: 1rem;
+        
+    }
+
+        .navbar-inverse .navbar-nav > li > a:hover,
+        .navbar-inverse .navbar-nav > li > a:focus {
+            color: gold;
+        }  
+            /* Sticky footer styles
 -------------------------------------------------- */
-html {
+            html {
   font-size: 14px;
 }
 @media (min-width: 768px) {
@@ -54,6 +101,446 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+/*Welcome Screen
+    ------------------------------------------------ */
+#banner {
+    padding: 12em 0 10em 0;
+    background-image: url('../../images/musicexchangebanner.jpg');
+    background-size: cover;
+    background-position: top;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    text-align: center;
+    border-top: 0.5em solid #5385c1;
+}
+
+    #banner h1 {
+        font-size: 3.5em;
+        font-weight: 100;
+        color: #fff;
+        line-height: 1em;
+        margin: 0 0 0.5em 0;
+        padding: 0;
+    }
+
+    #banner p {
+        font-size: 1em;
+        color: rgba(255, 255, 255, 0.55);
+        margin-bottom: 1.75em;
+    }
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+
+    #banner {
+        background-attachment: scroll;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+
+    #banner {
+        padding: 10em 2em 8em 2em;
+    }
+}
+
+@media screen and (max-width: 980px) {
+
+    #banner {
+        background-attachment: scroll;
+    }
+}
+
+@media screen and (max-width: 736px) {
+
+    #banner {
+        padding: 8em 1.5em 6em 1.5em;
+    }
+
+        #banner h1 {
+            font-size: 2.5em;
+        }
+
+        #banner p {
+            font-size: .9em;
+        }
+}
+
+@media screen and (max-width: 480px) {
+
+    #banner {
+        padding: 6em 1.5em 4em 1.5em;
+    }
+}
+
+.flex {
+    display: -ms-flexbox;
+    -ms-flex-wrap: wrap;
+    -ms-flex-pack: justify;
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    -moz-flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
+    -ms-justify-content: space-between;
+    justify-content: space-between;
+}
+
+    .flex.flex-2 article {
+        width: 47%;
+    }
+
+    .flex.flex-3 article {
+        position: relative;
+        width: 28%;
+    }
+
+        .flex.flex-3 article:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            right: -2em;
+            top: 0;
+            border-right: 1px solid #dbdbdb;
+            pointer-events: none;
+        }
+
+        .flex.flex-3 article:last-child:before {
+            border: none;
+        }
+
+    .flex.flex-4 .box {
+        width: 21%;
+    }
+
+@media screen and (max-width: 980px) {
+
+    .flex.flex-2 article {
+        width: 100%;
+        margin-bottom: 3em;
+    }
+
+        .flex.flex-2 article:last-child {
+            margin-bottom: 0;
+        }
+
+    .flex.flex-3 {
+        -moz-flex-direction: column;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+
+        .flex.flex-3 article {
+            width: 100%;
+            border-bottom: 1px solid #dbdbdb;
+            padding-bottom: 2.5em;
+            margin-bottom: 3em;
+        }
+
+            .flex.flex-3 article:last-child {
+                border: none;
+                padding-bottom: 0;
+                margin: 0 0 1em 0;
+            }
+
+            .flex.flex-3 article:before {
+                display: none;
+            }
+
+    .flex.flex-4 .box {
+        width: 47%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+
+    .flex.flex-4 .box {
+        width: 100%;
+    }
+}
+
+section.special, article.special {
+    text-align: center;
+}
+
+    section.special article, article.special article {
+        text-align: left;
+    }
+
+section.wrapper, article.wrapper {
+    padding: 6em 0;
+}
+
+    section.wrapper header, article.wrapper header {
+        margin-bottom: 4em;
+    }
+
+        section.wrapper header h2, article.wrapper header h2 {
+            font-size: 2.75em;
+            margin: 0 0 .5em 0;
+        }
+
+        section.wrapper header p, article.wrapper header p {
+            font-size: 1em;
+        }
+
+    section.wrapper article header, article.wrapper article header {
+        margin: 0;
+    }
+
+    section.wrapper.style1, article.wrapper.style1 {
+        background: #5385c1;
+        color: #bacee6;
+    }
+
+        section.wrapper.style1 header h2, article.wrapper.style1 header h2 {
+            color: #fff;
+        }
+
+        section.wrapper.style1 header p, article.wrapper.style1 header p {
+            color: #bacee6;
+        }
+
+        section.wrapper.style1 h3, article.wrapper.style1 h3 {
+            color: #FFF;
+        }
+
+@media screen and (max-width: 980px) {
+
+    section.wrapper, article.wrapper {
+        padding: 2em 0;
+    }
+}
+
+@media screen and (max-width: 736px) {
+
+    section.wrapper header, article.wrapper header {
+        margin-bottom: 2em;
+    }
+
+        section.wrapper header h2, article.wrapper header h2 {
+            font-size: 2em;
+        }
+
+        section.wrapper header p, article.wrapper header p {
+            font-size: .9em;
+        }
+}
+
+@media screen and (max-width: 480px) {
+
+    section.wrapper, article.wrapper {
+        text-align: center;
+    }
+
+        section.wrapper article, article.wrapper article {
+            text-align: center;
+        }
+}
+
+header p {
+    color: #bbb;
+    position: relative;
+    margin: 0 0 1.5em 0;
+}
+
+header h2 + p {
+    font-size: 1.25em;
+    margin-top: -1em;
+}
+
+header h3 + p {
+    font-size: 1.1em;
+    margin-top: -0.8em;
+}
+
+header h4 + p,
+header h5 + p,
+header h6 + p {
+    font-size: 0.9em;
+    margin-top: -0.6em;
+}
+
+input[type="submit"],
+input[type="reset"],
+input[type="button"],
+button,
+.button {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    -ms-appearance: none;
+    appearance: none;
+    -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+    -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+    -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+    background-color: #5a5a5a;
+    border-radius: 0;
+    border: 0;
+    color: #ffffff !important;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 600;
+    height: 2.85em;
+    line-height: 2.95em;
+    padding: 0 1.5em;
+    text-align: center;
+    text-decoration: none;
+    white-space: nowrap;
+}
+
+    input[type="submit"]:hover,
+    input[type="reset"]:hover,
+    input[type="button"]:hover,
+    button:hover,
+    .button:hover {
+        background-color: #676767;
+    }
+
+    input[type="submit"]:active,
+    input[type="reset"]:active,
+    input[type="button"]:active,
+    button:active,
+    .button:active {
+        background-color: #4d4d4d;
+    }
+
+    input[type="submit"].icon,
+    input[type="reset"].icon,
+    input[type="button"].icon,
+    button.icon,
+    .button.icon {
+        padding-left: 1.35em;
+    }
+
+        input[type="submit"].icon:before,
+        input[type="reset"].icon:before,
+        input[type="button"].icon:before,
+        button.icon:before,
+        .button.icon:before {
+            margin-right: 0.5em;
+        }
+
+    input[type="submit"].fit,
+    input[type="reset"].fit,
+    input[type="button"].fit,
+    button.fit,
+    .button.fit {
+        display: block;
+        margin: 0 0 1em 0;
+        width: 100%;
+    }
+
+    input[type="submit"].small,
+    input[type="reset"].small,
+    input[type="button"].small,
+    button.small,
+    .button.small {
+        font-size: 0.8em;
+    }
+
+    input[type="submit"].big,
+    input[type="reset"].big,
+    input[type="button"].big,
+    button.big,
+    .button.big {
+        font-size: 1.35em;
+    }
+
+    input[type="submit"].alt,
+    input[type="reset"].alt,
+    input[type="button"].alt,
+    button.alt,
+    .button.alt {
+        background-color: transparent;
+        box-shadow: inset 0 0 0 2px #dbdbdb;
+        color: #555 !important;
+    }
+
+        input[type="submit"].alt:hover,
+        input[type="reset"].alt:hover,
+        input[type="button"].alt:hover,
+        button.alt:hover,
+        .button.alt:hover {
+            background-color: rgba(144, 144, 144, 0.075);
+        }
+
+        input[type="submit"].alt:active,
+        input[type="reset"].alt:active,
+        input[type="button"].alt:active,
+        button.alt:active,
+        .button.alt:active {
+            background-color: rgba(144, 144, 144, 0.2);
+        }
+
+        input[type="submit"].alt.icon:before,
+        input[type="reset"].alt.icon:before,
+        input[type="button"].alt.icon:before,
+        button.alt.icon:before,
+        .button.alt.icon:before {
+            color: #bbb;
+        }
+
+    input[type="submit"].special,
+    input[type="reset"].special,
+    input[type="button"].special,
+    button.special,
+    .button.special {
+        background-color: #5385c1;
+        color: #ffffff !important;
+    }
+
+        input[type="submit"].special:hover,
+        input[type="reset"].special:hover,
+        input[type="button"].special:hover,
+        button.special:hover,
+        .button.special:hover {
+            background-color: #6692c8;
+        }
+
+        input[type="submit"].special:active,
+        input[type="reset"].special:active,
+        input[type="button"].special:active,
+        button.special:active,
+        .button.special:active {
+            background-color: #4278b8;
+        }
+
+    input[type="submit"].disabled, input[type="submit"]:disabled,
+    input[type="reset"].disabled,
+    input[type="reset"]:disabled,
+    input[type="button"].disabled,
+    input[type="button"]:disabled,
+    button.disabled,
+    button:disabled,
+    .button.disabled,
+    .button:disabled {
+        background-color: #9a9a9a !important;
+        box-shadow: inset 0 -0.15em 0 0 rgba(0, 0, 0, 0.15);
+        color: #fff !important;
+        cursor: default;
+        opacity: 0.25;
+    }
+
+@media screen and (max-width: 480px) {
+
+    input[type="submit"],
+    input[type="reset"],
+    input[type="button"],
+    button,
+    .button {
+        padding: 0;
+        width: 100%;
+    }
+}
+
+
 
 /*Profile Cards
     ------------------------------------------------ */
