--- a/TheMusicExchangeProject/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TheMusicExchangeProject/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,10 +12,10 @@
             <h4>Create a new account.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Input.ProfilePicture"></label>
                 <input type="file" asp-for="Input.ProfilePicture" id="fileUpload" accept=".png,.jpg,.jpeg,.gif,.tif" class="form-control" />
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Input.Name"></label>
                 <input asp-for="Input.Name" class="form-control" />
