Styling changes, mainly to the home screen

--- a/TheMusicExchangeProject/Views/Home/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Home/Index.cshtml
@@ -4,36 +4,53 @@
 
 <body>
     <section id="banner">
-        <h1>Welcome to The Music Exchange Project!</h1>
-        <p>A platform for meeting musicians</p>
+        <div class="banner-background">
+            <h1>Welcome to The Music Exchange Project!</h1>
+            <p>A platform for meeting musicians</p>
+        </div>
     </section>
-    
+    <section id="zero" class="wrapper">
+        <div class="inner">
+           <article>
+                <header>
+                    <h3 class="intro-title">What is TheMusicExchangeProject?</h3>
+                </header>
+                <p class="intro-text">
+                    TheMusicExchangeProject is a free to use platform for anyone interested in music!
+                    It doesn't matter if you've only just started learning or have been jamming for years, 
+                    we want to give you a new way to meet others.
+                </p>
+           </article>
+        </div>
+    </section>
     <section id="one" class="wrapper">
         <div class="inner">
             <div class="flex flex-3">
                 <article>
                     <header>
-                        <h3>Meet new people</h3>
+                        <h3 class="title">Meet new people</h3>
                     </header>
-                    <p>Text about meeting new people and matches</p>
+                    <p class="welcome-text">
+                        Text about meeting new people and matches
+                    </p>
                     <footer>
                         <a asp-area="" asp-controller="Account" asp-action="Index" class="button special">More</a>
                     </footer>
                 </article>
                 <article>
                     <header>
-                        <h3>Customise your skills and skill levels!</h3>
+                        <h3 class="title">Customise your skills and skill levels!</h3>
                     </header>
-                    <p>Text about customising skills and skill levels</p>
+                    <p class="welcome-text">Text about customising skills and skill levels</p>
                     <footer>
                         <a asp-area="" asp-controller="Skill" asp-action="Index" class="button special">More</a>
                     </footer>
                 </article>
                 <article>
                     <header>
-                        <h3>Chat to others</h3>
+                        <h3 class="title">Chat to others</h3>
                     </header>
-                    <p>Text about chatting to connected people</p>
+                    <p class="welcome-text">Text about chatting to connected people</p>
                     <footer>
                         <a asp-area="" asp-controller="Chat" asp-action="Index" class="button special">More</a>
                     </footer>
