--- a/TheMusicExchangeProject/wwwroot/css/site.css
+++ b/TheMusicExchangeProject/wwwroot/css/site.css
@@ -1,7 +1,21 @@
 ﻿@import url('https://fonts.googleapis.com/css?family=Lobster');
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans');
 /* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+.content-body {
+    font-family: 'Fira Sans', sans-serif;
+    background: #C0D9E1;
+    line-height: 1.4;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-bottom: 1em;
+    border: 1px solid #485277;
+    border-radius: 3px;
+}
+
+/* Navigation bar styles
+-------------------------------------------------- */
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -14,11 +28,12 @@ a.navbar-brand {
     font-size: 1.875rem;
     line-height: 20px;
     font-family: 'Lobster', cursive;
+    color: #D95D39;
 }
 
 #logout {
-    color: #fff;
-    font-family: 'Lobster', cursive;
+    color: #F18805;
+    font-family: 'Fira Sans', sans-serif;
     font-size: 1rem;
 }
 
@@ -26,60 +41,33 @@ a.navbar-brand {
     background-color: #676767;
 }
 
-.navbar-inverse{
-    background-color: #000;
+.navbar-inverse {
+    background-color: #485277;
     border-color: #eeeeee;
 }
     .navbar-inverse .navbar-brand {
-        color: #fff;
+        color: #F18805;
     }
         .navbar-inverse .navbar-brand:hover,
         .navbar-inverse .navbar-brand:focus {
-            color: gold;
-           
+            color: #F18805;
         }
     .navbar-inverse .navbar-text {
-        color: #fff;
-        
+        color: #F18805;
     }
 
     .navbar-inverse .navbar-nav > li > a {
-        color: #fff;
-        font-family: 'Lobster', cursive;
+        color: #F18805;
+        font-family: 'Fira Sans', sans-serif;
         font-size: 1rem;
-        
     }
 
-        .navbar-inverse .navbar-nav > li > a:hover,
-        .navbar-inverse .navbar-nav > li > a:focus {
-            color: gold;
-        }  
-            /* Sticky footer styles
--------------------------------------------------- */
-            html {
-  font-size: 14px;
+.navbar-light .navbar-nav .nav-link {
+    color: #F18805;
 }
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
+    .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
+        color: #F4BB47;
+    }
 
 /* Sticky footer styles
 -------------------------------------------------- */
@@ -103,6 +91,30 @@ body {
 }
 /*Welcome Screen
     ------------------------------------------------ */
+#zero {
+    padding: 1.5em;
+    text-align: center;
+}
+.intro-title {
+    color: #485277;
+    font-weight:700;
+}
+.intro-text {
+    color: #291C1B;
+}
+.title {
+    color: #F18805;
+}
+.welcome-text {
+    color: #C0D9E1;
+}
+#one {
+    background-color: #485277;
+    padding: 2em;
+}
+.banner-background {
+    background-color: #C0D9E1;
+}
 #banner {
     padding: 12em 0 10em 0;
     background-image: url('../../images/musicexchangebanner.jpg');
@@ -111,22 +123,23 @@ body {
     background-attachment: fixed;
     background-repeat: no-repeat;
     text-align: center;
-    border-top: 0.5em solid #5385c1;
+    font-family: 'Lobster', cursive;
 }
 
     #banner h1 {
         font-size: 3.5em;
         font-weight: 100;
-        color: #fff;
+        color: #485277;
         line-height: 1em;
         margin: 0 0 0.5em 0;
-        padding: 0;
+        padding-top: 0.25em;
     }
 
     #banner p {
-        font-size: 1em;
-        color: rgba(255, 255, 255, 0.55);
+        font-size: 1.5em;
+        color: #485277;
         margin-bottom: 1.75em;
+        padding-bottom: 0.75em;
     }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
@@ -344,219 +357,19 @@ section.wrapper, article.wrapper {
         }
 }
 
-header p {
-    color: #bbb;
-    position: relative;
-    margin: 0 0 1.5em 0;
-}
-
-header h2 + p {
-    font-size: 1.25em;
-    margin-top: -1em;
-}
-
-header h3 + p {
-    font-size: 1.1em;
-    margin-top: -0.8em;
-}
-
-header h4 + p,
-header h5 + p,
-header h6 + p {
-    font-size: 0.9em;
-    margin-top: -0.6em;
-}
-
-input[type="submit"],
-input[type="reset"],
-input[type="button"],
-button,
-.button {
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    -ms-appearance: none;
-    appearance: none;
-    -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    background-color: #5a5a5a;
-    border-radius: 0;
-    border: 0;
-    color: #ffffff !important;
-    cursor: pointer;
-    display: inline-block;
-    font-weight: 600;
-    height: 2.85em;
-    line-height: 2.95em;
-    padding: 0 1.5em;
-    text-align: center;
-    text-decoration: none;
-    white-space: nowrap;
-}
-
-    input[type="submit"]:hover,
-    input[type="reset"]:hover,
-    input[type="button"]:hover,
-    button:hover,
-    .button:hover {
-        background-color: #676767;
-    }
-
-    input[type="submit"]:active,
-    input[type="reset"]:active,
-    input[type="button"]:active,
-    button:active,
-    .button:active {
-        background-color: #4d4d4d;
-    }
-
-    input[type="submit"].icon,
-    input[type="reset"].icon,
-    input[type="button"].icon,
-    button.icon,
-    .button.icon {
-        padding-left: 1.35em;
-    }
-
-        input[type="submit"].icon:before,
-        input[type="reset"].icon:before,
-        input[type="button"].icon:before,
-        button.icon:before,
-        .button.icon:before {
-            margin-right: 0.5em;
-        }
-
-    input[type="submit"].fit,
-    input[type="reset"].fit,
-    input[type="button"].fit,
-    button.fit,
-    .button.fit {
-        display: block;
-        margin: 0 0 1em 0;
-        width: 100%;
-    }
-
-    input[type="submit"].small,
-    input[type="reset"].small,
-    input[type="button"].small,
-    button.small,
-    .button.small {
-        font-size: 0.8em;
-    }
-
-    input[type="submit"].big,
-    input[type="reset"].big,
-    input[type="button"].big,
-    button.big,
-    .button.big {
-        font-size: 1.35em;
-    }
-
-    input[type="submit"].alt,
-    input[type="reset"].alt,
-    input[type="button"].alt,
-    button.alt,
-    .button.alt {
-        background-color: transparent;
-        box-shadow: inset 0 0 0 2px #dbdbdb;
-        color: #555 !important;
-    }
-
-        input[type="submit"].alt:hover,
-        input[type="reset"].alt:hover,
-        input[type="button"].alt:hover,
-        button.alt:hover,
-        .button.alt:hover {
-            background-color: rgba(144, 144, 144, 0.075);
-        }
-
-        input[type="submit"].alt:active,
-        input[type="reset"].alt:active,
-        input[type="button"].alt:active,
-        button.alt:active,
-        .button.alt:active {
-            background-color: rgba(144, 144, 144, 0.2);
-        }
-
-        input[type="submit"].alt.icon:before,
-        input[type="reset"].alt.icon:before,
-        input[type="button"].alt.icon:before,
-        button.alt.icon:before,
-        .button.alt.icon:before {
-            color: #bbb;
-        }
-
-    input[type="submit"].special,
-    input[type="reset"].special,
-    input[type="button"].special,
-    button.special,
-    .button.special {
-        background-color: #5385c1;
-        color: #ffffff !important;
-    }
-
-        input[type="submit"].special:hover,
-        input[type="reset"].special:hover,
-        input[type="button"].special:hover,
-        button.special:hover,
-        .button.special:hover {
-            background-color: #6692c8;
-        }
-
-        input[type="submit"].special:active,
-        input[type="reset"].special:active,
-        input[type="button"].special:active,
-        button.special:active,
-        .button.special:active {
-            background-color: #4278b8;
-        }
-
-    input[type="submit"].disabled, input[type="submit"]:disabled,
-    input[type="reset"].disabled,
-    input[type="reset"]:disabled,
-    input[type="button"].disabled,
-    input[type="button"]:disabled,
-    button.disabled,
-    button:disabled,
-    .button.disabled,
-    .button:disabled {
-        background-color: #9a9a9a !important;
-        box-shadow: inset 0 -0.15em 0 0 rgba(0, 0, 0, 0.15);
-        color: #fff !important;
-        cursor: default;
-        opacity: 0.25;
-    }
-
-@media screen and (max-width: 480px) {
-
-    input[type="submit"],
-    input[type="reset"],
-    input[type="button"],
-    button,
-    .button {
-        padding: 0;
-        width: 100%;
-    }
-}
-
-
-
 /*Profile Cards
     ------------------------------------------------ */
-body {
-    font-family: sans-serif;
-    background: #ecf0f1;
-    line-height: 1.4;
+.hidden{
+    display: none;
 }
 
 p {
     color: #666;
 }
 
-h3 {
-    font-size: 2em;
-    color: #e74c3c;
+.card-title {
+    font-size: 1.5em;
+    color: #D95D39;
 }
 
 .centered {
@@ -584,7 +397,7 @@ h3 {
         }
 
 .card-content {
-    padding: 1.4em;
+    padding: 1em;
 }
 
     .card-content h2 {
@@ -629,14 +442,15 @@ h3 {
 .leftcolumn {
     float: left;
     width: 75%;
+    margin-top: 2em;
 }
 
 /* Right column */
 .rightcolumn {
     float: left;
     width: 25%;
-    background-color: #f1f1f1;
     padding-left: 20px;
+    margin-top: 0.5em;
 }
 .list-card {
     background-color: white;
@@ -701,6 +515,7 @@ h3 {
     .block-btn:hover {
         background: rgb(229, 17, 17);
     }
+
 /* Chat window
     ------------------------------------------------ */
 .group {
