--- a/TheMusicExchangeProject/Views/Account/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Account/Index.cshtml
@@ -4,14 +4,23 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <form asp-action="Index" method="get">
     <div class="form-actions no-color">
-        <p>
-            Find someone that plays: <input type="text" name="SearchString" />
-            At skill level: <select name="selectedLevel" asp-items="ViewBag.levels" value="@ViewData"["levelFilter"]"></select>
-            <input type="submit" value="Search" class="btn btn-default" />
-            <a asp-action="Index">Clear Search</a>
-        </p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-8" style="margin-top:0.5em; display:inline-block;">
+                    Find someone that plays: <input type="text" name="SearchString" />
+
+                    At skill level: <select name="selectedLevel" asp-items="ViewBag.levels" value="@ViewData" ["levelFilter"]"></select>
+                </div>
+                <div class="col-sm-4" style="margin-top:0.25em;">   
+                    <input type="submit" value="Search" class="btn btn-default" />
+                    <a asp-action="Index">Clear Search</a>
+                </div>
+                
+            </div>
+        </div>
     </div>
 </form>
 <div class="leftcolumn">
@@ -21,7 +30,7 @@
     {
         <article class="card">
             <div class="card-content">
-                <h3>
+                <h3 class="card-title">
                     @Html.DisplayFor(modelItem => item.Users.Name)
                     @Html.DisplayFor(modelItem => item.Skills.SkillName)
                     @Html.DisplayFor(modelItem => item.SkillLevel)
@@ -46,6 +55,7 @@
 <div class="rightcolumn">
     <div class="list-card">
         <h3>Requests:</h3>
+        <div id="requests" class="hidden">
         <ul>
             @foreach (var connection in ViewBag.reqData)
             {
@@ -56,9 +66,12 @@
                 </li>
             }
         </ul>
+        </div>
+        <button id="show-hide-btn" onclick="showhideRequests()">. . .</button>
     </div>
     <div class="list-card">
         <h3>Your Connections:</h3>
+        <div id="connections" class="hidden">
         <ul>
             @foreach (var connection in ViewBag.conData)
             {
@@ -68,9 +81,12 @@
                 </li>
             }
         </ul>
+        </div>
+        <button id="show-hide-btn" onclick="showhideConnections()">. . .</button>
     </div>
     <div class="list-card">
         <h3>Your Blocks:</h3>
+        <div id="blocks" class="hidden">
         <ul>
             @foreach (var block in ViewBag.blkData)
             {
@@ -80,5 +96,7 @@
                 </li>
             }
         </ul>
+        </div>
+        <button id="show-hide-btn" onclick="showhideBlocks()">. . .</button>
     </div>
 </div>
