--- a/TheMusicExchangeProject/Views/Shared/_Layout.cshtml
+++ b/TheMusicExchangeProject/Views/Shared/_Layout.cshtml
@@ -36,29 +36,30 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         @if (SignInManager.IsSignedIn(User))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Index">Search Users</a>
+                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Index">Search Users</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Skill" asp-action="Index">Skills</a>
+                                <a class="nav-link" asp-area="" asp-controller="Skill" asp-action="Index">Skills</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Chat" asp-action="Index">Messages</a>
+                                <a class="nav-link" asp-area="" asp-controller="Chat" asp-action="Index">Messages</a>
                             </li>
                         }
                     </ul>
-                    <partial name="_LoginPartial" />
+                    
                 </div>
+                <partial name="_LoginPartial" />
             </div>
         </nav>
     </header>
     <div class="container">
         <partial name="_CookieConsentPartial" />
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-3 content-body">
             @RenderBody()
         </main>
     </div>
