--- a/TheMusicExchangeProject/wwwroot/css/site.css
+++ b/TheMusicExchangeProject/wwwroot/css/site.css
@@ -89,6 +89,10 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/* Registration and Login
+    ------------------------------------------------ */
+
 /*Welcome Screen
     ------------------------------------------------ */
 #zero {
@@ -359,6 +363,11 @@ section.wrapper, article.wrapper {
 
 /*Profile Cards
     ------------------------------------------------ */
+#search {
+    background-color: #485277;
+    
+}
+
 .hidden{
     display: none;
 }
@@ -452,6 +461,7 @@ p {
     padding-left: 20px;
     margin-top: 0.5em;
 }
+
 .list-card {
     background-color: white;
     padding: 20px;
