--- a/TheMusicExchangeProject/Views/Shared/_Layout.cshtml
+++ b/TheMusicExchangeProject/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
     </header>
     <div class="container">
         <partial name="_CookieConsentPartial" />
-        <main role="main" class="pb-3 content-body">
+        <main role="main" class="content-body">
             @RenderBody()
         </main>
     </div>
