--- a/TheMusicExchangeProject/Views/Home/Index.cshtml
+++ b/TheMusicExchangeProject/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<body>
+<body class="welcome-body">
     <section id="banner">
         <div class="banner-background">
             <h1>Welcome to The Music Exchange Project!</h1>
