--- a/TheMusicExchangeProject/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TheMusicExchangeProject/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,16 +6,16 @@
 
 <div class="login-body">
     <div class="login-inner col-sm-6 centered">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+        <form asp-route-returnUrl="@Model.ReturnUrl" enctype="multipart/form-data" method="post">
             <h3 class="login-title">Register</h3>
             <h4 class="login-subtitle">Create a new account</h4>
             <hr />
             <div class="login-content">
                 <div asp-validation-summary="All" class="text-danger"></div>
-                @*<div class="form-group">
-            <label asp-for="Input.ProfilePicture"></label>
-            <input type="file" asp-for="Input.ProfilePicture" id="fileUpload" accept=".png,.jpg,.jpeg,.gif,.tif" class="form-control" />
-        </div>*@
+                <div class="form-group">
+                    <label asp-for="Input.ProfilePicture"></label>
+                    <input type="file" asp-for="Input.ProfilePicture" id="fileUpload" accept=".png,.jpg,.jpeg,.gif,.tif"/>
+                </div>
                 <div class="form-group row">
                     <div class="col-sm-6 centered login-labels">
                         <label asp-for="Input.Name"></label>
